--- a/modules/retail/pages/retail-formulas.adoc
+++ b/modules/retail/pages/retail-formulas.adoc
@@ -273,7 +273,7 @@ Branch ID set in the PXE formula form.
 Device that contains the salt configuration.
 
 [systemitem]``root``
-device that contains the already deployed root filesystem.
+Device that contains the already deployed root filesystem.
 It is used for the fallback to local boot.
 
 
