--- a/modules/retail/pages/retail-admin.adoc
+++ b/modules/retail/pages/retail-admin.adoc
@@ -95,7 +95,8 @@ Spaces and other non-alphanumeric characters will be removed when the name is pr
 . In the {susemgr} {webui}, navigate to menu:Main Navigation[Systems > System Groups], and click the btn:[Create Group] button.
 . In the [guimenu]``Create System Group`` dialog, create a new system group, using the hardware type group name you created earlier.
 
-Now, all the information about your point-of-service terminals is prepared.  Power on your point-of-service terminals and the branch server will bootstrap the terminals according to the provided data.
+Power on your point-of-service terminals.
+The branch server will bootstrap the terminals according to the data you have provided.
 
 
 
