--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -47,7 +47,8 @@ ifndef::backend-pdf[]
 *** xref:tshoot-rpctimeout.adoc[Troubleshooting RPC Timeouts]
 // Appendices
 // Commenting this out until we find the right place to put it. LKB 2019-03-21
-//** xref:autoyast-example.adoc[AutoYaST Example]
+// Including it again; it's an important bit of info. ke 2019-05-09
+** xref:autoyast-example.adoc[AutoYaST Example]
 // License
 ** xref:common_gfdl1.2_i.adoc[License]
 
