--- a/modules/salt/pages/salt-rate-limiting.adoc
+++ b/modules/salt/pages/salt-rate-limiting.adoc
@@ -40,7 +40,7 @@ Defaults to 1.0 seconds.
 
 == Ping Timeout
 
-During Salt batch calls, Salt clients will perform a presence ping.
+Salt batch calls begin with the Salt master performing a presence ping on the minions.
 This parameter changes the timeout setting for the presence ping, in seconds.
 
 Adjust the [systemitem]``java.salt_presence_ping_timeout`` parameter.
