Wording re pings.

--- a/modules/salt/pages/salt-rate-limiting.adoc
+++ b/modules/salt/pages/salt-rate-limiting.adoc
@@ -50,7 +50,7 @@ Defaults to 4 seconds.
 
 == Ping Gather Job Timeout
 
-During Salt batch calls, a job runs to handles the presence ping from the clients.
+During Salt batch calls, a job runs on the Salt clients to handle the presence ping from the master.
 This parameter changes the timeout setting for gathering the presence ping, in seconds.
 
 If a minion does not reply to a ping within the allocated time, it will be marked as [systemitem]``not available``, and will be excluded from the command.
