Note about when actions begin.

--- a/modules/salt/pages/salt-rate-limiting.adoc
+++ b/modules/salt/pages/salt-rate-limiting.adoc
@@ -41,6 +41,7 @@ There are two parameters that control how presence pings from the Salt master ar
 
 Salt batch calls begin with the Salt master performing a presence ping on the target minions.
 A ping gather job runs on the Salt master to handle the incoming pings from the minions.
+Batched actions will begin only after all minions have either responded to the ping, or timed out.
 
 The presence ping is an ordinary Salt command, so it is subject to the same timeout parameters as all other Salt commands.
 You can configure the global timeout values in the [filename]``/etc/salt/master.d/custom.conf`` configuration file.
