--- a/modules/installation/pages/client-requirements.adoc
+++ b/modules/installation/pages/client-requirements.adoc
@@ -17,6 +17,9 @@ Supported operating systems for traditional and Salt clients are listed in this 
 |_Latest minor release {rhnminrelease6}_               | {x86}, {x86}_64                              | Supported           | Supported
 |_Latest minor release {rhnminrelease7}_               | {x86}_64                                     | Supported           | Supported
 | Open Enterprise Server 2015, 2015 SP1, 2018          | {x86}_64                                     | Supported           | Supported
+| {opensuse} Leap 15.1                                 | {x86}_64                                     | Unsupported         | Supported
+| {ubuntu} 16.04                                       | {x86}_64                                     | Unsupported         | Supported
+| {ubuntu} 18.04                                       | {x86}_64                                     | Unsupported         | Supported
 |===
 
 
