--- a/modules/salt/pages/salt-rate-limiting.adoc
+++ b/modules/salt/pages/salt-rate-limiting.adoc
@@ -18,7 +18,7 @@ Salt commands that are executed from the command line are not subject to these p
 
 There are two parameters that control how actions are sent to clients, one for the batch size, and one for the delay.
 
-When the Salt master sends a batch of actions to the target minions, it will send it to the number of minions determined in the batch size parameter.
+When the {productname} Server executes an action against multiple target minions, it will send a Salt command to the number of minions determined in the batch size parameter.
 As each minion completes, the action begins on a new minion after the specified delay period.
 
 Choosing a lower batch size will reduce system load and parallelism, but might reduce overall performance for processing actions.
