--- a/modules/salt/pages/salt-rate-limiting.adoc
+++ b/modules/salt/pages/salt-rate-limiting.adoc
@@ -23,7 +23,7 @@ As each minion completes, the action begins on a new minion after the specified 
 
 Choosing a lower batch size will reduce system load and parallelism, but might reduce overall performance for processing actions.
 
-The batch size parameter sets the maximum number of clients that can execute a single action at the same time.
+The batch size parameter sets the maximum number of minions that can execute a single action at the same time.
 Adjust the [systemitem]``java.salt_batch_size`` parameter.
 Defaults to 100.
 
