--- a/modules/salt/pages/salt-rate-limiting.adoc
+++ b/modules/salt/pages/salt-rate-limiting.adoc
@@ -27,7 +27,7 @@ The batch size parameter sets the maximum number of minions that can execute a s
 Adjust the [systemitem]``java.salt_batch_size`` parameter.
 Defaults to 100.
 
-Increasing the delay increases the chance that multiple minions will have completed before the next action is issued, resulting in fewer overall commands, and reducing load.
+Increasing the delay increases the chance that multiple minions will have completed before the next command is issued, resulting in fewer overall commands, and reducing load.
 
 The batch delay parameter sets the amount of time, in seconds, to wait after an action is processed before beginning to process the action on the next minion.
 Adjust the [systemitem]``java.salt_batch_delay`` parameter.
