power on terminals after data registration (#451)
* power on terminals after data registration
https://github.com/SUSE/spacewalk/issues/7553
https://bugzilla.suse.com/show_bug.cgi?id=1131979

* Update modules/retail/pages/retail-admin.adoc
Co-Authored-By: Lana Brindley <lbrindley@suse.de>

--- a/modules/retail/pages/retail-admin.adoc
+++ b/modules/retail/pages/retail-admin.adoc
@@ -95,6 +95,10 @@ Spaces and other non-alphanumeric characters will be removed when the name is pr
 . In the {susemgr} {webui}, navigate to menu:Main Navigation[Systems > System Groups], and click the btn:[Create Group] button.
 . In the [guimenu]``Create System Group`` dialog, create a new system group, using the hardware type group name you created earlier.
 
+Power on your point-of-service terminals.
+The branch server will bootstrap the terminals according to the data you have provided.
+
+
 
 
 [[retail.sect.admin.terminal_naming]]
