provide skel for a 2nd channel; cosmetic adoc tweak

--- a/modules/administration/pages/autoyast-example.adoc
+++ b/modules/administration/pages/autoyast-example.adoc
@@ -84,12 +84,19 @@ Use this enhancement fragment to add child channels:
    <product>$c_product</product>
    <product_dir>/</product_dir>
   </listentry>
-...
+  <listentry>
+  <!-- SLES SUSE Manager tools Pool -->
+    <media_url>http://$c_server/ks/dist/child/`channel-label`/`sle-manager-tools`/`distribution-label`</media_url>
+    ...
+  </listentry>
+  ...
  </add_on_products>
 </add-on>
 ----
 
-Replace [replaceable]``channel-label`` and [replaceable]``distribution-label`` with the correct labels (such as `sles11-sp1-updates-x86_64` and `sles11-sp2-x86_64`). Ensure that the distribution label corresponds to the Autoinstallable Distribution. Set the variables (such as ``$c_server``) according to your environment.
+Replace [replaceable]``channel-label`` and [replaceable]``distribution-label`` with the correct labels (such as `sles12-sp4-updates-x86_64` and `sles12-sp4-x86_64`).
+Ensure that the distribution label corresponds to the Autoinstallable Distribution.
+Set the variables (such as ``$c_server``) according to your environment.
 For information about variables, see
 ifdef::env-github,backend-html5[]
 <<reference-webui-systems-autoinstallation.adoc#s4-sm-system-kick-dist-variables, Autoinstallable Distribution Variables>>.
