Fix: typos and adoc syntax

--- a/modules/administration/pages/auth-methods.adoc
+++ b/modules/administration/pages/auth-methods.adoc
@@ -147,12 +147,12 @@ The endpoint for ACS in {productname} is: https://example.com/rhn/manager/ssaml/
 * Single Logout Service (or SLS): an endpoint to initiate a logout request from the IdP.
 The endpoint for SLS in {productname} is: https://example.com/rhn/manager/ssaml/sls
 * Metadata: an endpoint to retrieve {productname} metadata for SAML.
-The endpoint for Metadata in {productname} is https://example.com/rhn/manager/ssaml/metadata
+The endpoint for Metadata in {productname} is: https://example.com/rhn/manager/ssaml/metadata
 
 [IMPORTANT]
 ====
 Your IdP must have a SAML:Attribute containing the username of the IdP user domain, called `uid`.
-The `uid` attrribute passed in the SAML:Attribute must be created in the {productname} user base before you activate single sign-on.
+The `uid` attribute passed in the SAML:Attribute must be created in the {productname} user base before you activate single sign-on.
 ====
 
 After the authentication with the IdP using the user `orgadmin` is successful, you will be logged in into {productname} as the `orgadmin` user, provided that the `orgadmin` user exists in {productname}.
