Fix: use /etc/rhn/rhn.conf instead of config-defaults

--- a/modules/administration/pages/auth-methods.adoc
+++ b/modules/administration/pages/auth-methods.adoc
@@ -167,8 +167,8 @@ Single sign-on is disabled by default.
 ----
 java.sso = true
 ----
-. Configure `/usr/share/rhn/config-defaults/rhn_java_sso.conf` with the parameters retrieved from your IdP.
-To find all the occurrences you need to change, search in the file for the placeholders [systemitem]``YOUR-PRODUCT`` and [systemitem]```YOUR-IDP-ENTITY``.
+. Copy parameters you want to customize from `/usr/share/rhn/config-defaults/rhn_java_sso.conf` into `/etc/rhn/rhn.conf` and proceed by inserting the parameters you want to customize.
+To find all the occurrences you need to change, search in the file for the placeholders [literal]``YOUR-PRODUCT`` and [literal]```YOUR-IDP-ENTITY``.
 Every parameter comes with a brief explanation of what it is meant for.
 . Restart spacewalk-service to pick up the changes:
 +
