Docs: endpoint rename

--- a/modules/administration/pages/auth-methods.adoc
+++ b/modules/administration/pages/auth-methods.adoc
@@ -143,11 +143,11 @@ Check your IdP documentation for instructions.
 You will need these endpoints:
 
 * Assertion Consumer Service (or ACS): an endpoint to accept SAML messages to establish a session into the Service Provider.
-The endpoint for ACS in {productname} is: https://example.com/rhn/manager/ssaml/acs
+The endpoint for ACS in {productname} is: https://example.com/rhn/manager/sso/acs
 * Single Logout Service (or SLS): an endpoint to initiate a logout request from the IdP.
-The endpoint for SLS in {productname} is: https://example.com/rhn/manager/ssaml/sls
+The endpoint for SLS in {productname} is: https://example.com/rhn/manager/sso/sls
 * Metadata: an endpoint to retrieve {productname} metadata for SAML.
-The endpoint for Metadata in {productname} is: https://example.com/rhn/manager/ssaml/metadata
+The endpoint for Metadata in {productname} is: https://example.com/rhn/manager/sso/metadata
 
 [IMPORTANT]
 ====
@@ -175,14 +175,14 @@ Example:
 
 +
 ----
-onelogin.saml2.sp.assertion_consumer_service.url = https://YOUR-PRODUCT-HOSTNAME-OR-IP/rhn/manager/ssaml/acs
+onelogin.saml2.sp.assertion_consumer_service.url = https://YOUR-PRODUCT-HOSTNAME-OR-IP/rhn/manager/sso/acs
 ----
 
 In order to customize it, create the corresponding option in `/etc/rhn/rhn.conf` by prefixing the option name with `java.sso.`:
 
 +
 ----
-java.sso.onelogin.saml2.sp.assertion_consumer_service.url = https://YOUR-PRODUCT-HOSTNAME-OR-IP/rhn/manager/ssaml/acs
+java.sso.onelogin.saml2.sp.assertion_consumer_service.url = https://YOUR-PRODUCT-HOSTNAME-OR-IP/rhn/manager/sso/acs
 ----
 
 To find all the occurrences you need to change, search in the file for the placeholders [literal]``YOUR-PRODUCT`` and [literal]```YOUR-IDP-ENTITY``.
