--- a/modules/salt/pages/salt-rate-limiting.adoc
+++ b/modules/salt/pages/salt-rate-limiting.adoc
@@ -44,7 +44,7 @@ Salt batch calls begin with the Salt master performing a presence ping on the ta
 A ping gather job runs on the Salt master to handle the incoming pings from the minions.
 Batched commands will begin only after all minions have either responded to the ping, or timed out.
 
-The presence ping is an ordinary Salt command, so it is subject to the same timeout parameters as all other Salt commands.
+The presence ping is an ordinary Salt command, but is not subject to the same timeout parameters as all other Salt commands (`timeout`/`gather_job_timeout`), rather, it has its own parameters (`presence_ping_timeout`/`presence_ping_gather_job_timeout`).
 You can configure the global timeout values in the [filename]``/etc/salt/master.d/custom.conf`` configuration file.
 However, to allow for quicker detection of unresponsive minions, the timeout values for presence pings are by default significantly shorter than those used elsewhere.
 Therefore, we recommend that you override the global timeout values by setting specific values for presence pings in [filename]``/etc/rhn/rhn.conf``.
