Wording update on presence ping recommendations

--- a/modules/salt/pages/salt-rate-limiting.adoc
+++ b/modules/salt/pages/salt-rate-limiting.adoc
@@ -47,7 +47,7 @@ Batched commands will begin only after all minions have either responded to the 
 The presence ping is an ordinary Salt command, but is not subject to the same timeout parameters as all other Salt commands (`timeout`/`gather_job_timeout`), rather, it has its own parameters (`presence_ping_timeout`/`presence_ping_gather_job_timeout`).
 You can configure the global timeout values in the [filename]``/etc/salt/master.d/custom.conf`` configuration file.
 However, to allow for quicker detection of unresponsive minions, the timeout values for presence pings are by default significantly shorter than those used elsewhere.
-Therefore, we recommend that you override the global timeout values by setting specific values for presence pings in [filename]``/etc/rhn/rhn.conf``.
+You can configure the presence ping parameters in [filename]``/etc/rhn/rhn.conf``, however the default values should be sufficient in most cases.
 
 A lower total presence ping timeout value will increase the chance of false negatives.
 In some cases, a minion might be marked as non-responding, when it is responding, but did not respond quickly enough.
