--- a/modules/administration/pages/autoyast-example.adoc
+++ b/modules/administration/pages/autoyast-example.adoc
@@ -141,7 +141,7 @@ Here is a literal example for `sles12-sp4-x86_64`:
 It is required that you add the updates tools channel to the `<add-on>` {ay} snippet section.
 This ensures your systems are provided with an up-to-date version of the `libzypp` package.
 If you do not include the updates tools channel, you will encounter `400` errors.
-In this example, the (DISTRIBUTION_NAME) is replaced with the name of the autoinstallation distribution, as created previously, from menu:Systems[Autoinstallation > Distributions].
+In this example, the (DISTRIBUTION_NAME) is replaced with the name of the autoinstallation distribution from menu:Systems[Autoinstallation > Distributions].
 
 ----
 <listentry>
