--- a/modules/retail/pages/retail-formulas.adoc
+++ b/modules/retail/pages/retail-formulas.adoc
@@ -246,6 +246,14 @@ Saltboot supports common kernel parameters and saltboot-specific kernel paramete
 All the parameters can be entered in the [guimenu]``Kernel Command Line Parameters`` field of the PXE formula.
 
 [systemitem]``kiwidebug=1``::
+[WARNING]
+.Do Not Use in Production
+====
+Do not use this parameter in a production environment as it creates a major security hole.
+This parameter should be used only in a development environment for debug purposes.
+====
++
+
 Starts a shell on tty2 during boot and enables debug log level in Salt.
 
 [systemitem]``MASTER``::
@@ -256,25 +264,35 @@ MASTER=myproxy.domain.com
 ----
 
 [systemitem]``SALT_TIMEOUT``::
-Fall back to the local boot if the Salt master does not apply the saltboot state within this timeout (default: 60 seconds). For example:
+Overrides the local boot fallback timeout if the Salt master does not apply the saltboot state within this timeout (default: 60 seconds).
+For example:
 +
 ----
 SALT_TIMEOUT=300
 ----
 
 // see https://bugzilla.suse.com/show_bug.cgi?id=1111348#c3
-[systemitem]``DISABLE_HOSTNAME_ID`` and [systemitem]``DISABLE_UNIQUE_SUFFIX``::
-Option for manipulating the names of the terminals.
+[systemitem]``DISABLE_HOSTNAME_ID``::
+If the terminal has a hostname assigned by DHCP, it is by default used as a minion ID.
+Setting this option to `1` disables this mechanism, and SMBios information will be used as a minion ID.
+
+[systemitem]``DISABLE_UNIQUE_SUFFIX``::
+Setting this option to `1` disables adding random generated suffix to terminal minion ID.
++
+If you set this parameter make sure your terminal has either a unique hostname provided by DHCP and DNS, or the terminal hardware comes with a unique serial number stored in its SMBios memory.
+Otherwise there is a risk of terminal minion ID duplicity, and bootstrapping the minion will fail.
+
+The following parameters (`MINION_ID_PREFIX`, `salt_device`, `root`) are usually autoconfigured and should be used only in specific conditions such as debugging or development:
 
 [systemitem]``MINION_ID_PREFIX``::
 Branch ID set in the PXE formula form.
 
-[systemitem]``salt_device``
-Device that contains the salt configuration.
+[systemitem]``salt_device``::
+Device that contains the Salt configuration.
 
-[systemitem]``root``
+[systemitem]``root``::
 Device that contains the already deployed root filesystem.
-It is used for the fallback to local boot.
+Used for falling back to local boot.
 
 
 
