--- a/modules/reference/pages/clm/clm-filters.adoc
+++ b/modules/reference/pages/clm/clm-filters.adoc
@@ -5,7 +5,7 @@
 . In the {productname} {webui}, navigate to menu:Content Lifecycle Management[Filters], and click btn:[Create Filter]
 . In the [guimenu]``name`` field, enter a descriptive name for your filter.
 . In the [guimenu]``filter type`` field, choose the entity you want to search.
-. In the [guimenu]``name criteria`` field, enter a search term.
+. Fill in the additional fields required for the filter (they vary according to the `filter type`).
 . Check the [guimenu]``deny`` checkbox to find results excluding your search term, uncheck it to find results including your search term.
 . Click the btn:[Create] button to create your filter and return to the filter list.
 . Navigate to menu:Content Lifecycle Management[Projects].
