Mention the filters in the content project procedure

--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -32,6 +32,8 @@ The [guimenu]``label`` field only accepts lowercase letters, numbers, periods (`
 The available child channels for the selected base channel will be displayed, including information on whether the channel is mandatory or recommended.
 . Check the child channels you require, and click btn:[Save] to return to the project page.
 The software channels you selected should now be showing.
+. Click btn:[Attach/Detach Filters].
+. In the [guimenu]``Filters`` dialog, select the filters you want to attach to the project. For creating a filter, click the btn:[Create new Filter] in the same dialog.
 . Click btn:[Add new Environment].
 . In the [guimenu]``Environment Lifecycle`` dialog, give the first environment a name and a description, and click btn:[Save].
 The [guimenu]``name`` field only accepts lowercase letters, numbers, periods (``.``), hyphens (``-``) and underscores (``_``).
