Fix the attach/detach source link caption

--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -27,7 +27,7 @@ The documentation for this feature is being offered as a preview of changes to c
 The [guimenu]``label`` field only accepts lowercase letters, numbers, periods (``.``), hyphens (``-``) and underscores (``_``).
 . In the [guimenu]``name`` field, enter a descriptive name for your project.
 . Click the btn:[Create] button to create your project and return to the project page.
-. Click btn:[Add new Source].
+. Click btn:[Attach/Detach Sources].
 . In the [guimenu]``Sources`` dialog, select the source type, and select a base channel for your project.
 The available child channels for the selected base channel will be displayed, including information on whether the channel is mandatory or recommended.
 . Check the child channels you require, and click btn:[Save] to return to the project page.
