updated entities for imbz for pdf, suma and uyuni, adjusted typo on productname and fixed section titles out of sequence.

--- a/branding/pdf-resources/entities.adoc
+++ b/branding/pdf-resources/entities.adoc
@@ -1,6 +1,7 @@
 :grub: Grub
-:zseries: z Systems
-:zsystems: {zseries}
+:ibmz: IBM Z
+:zsystems: {ibmz}
+:zseries: {ibmz}
 :ppc: POWER
 :ppc64le: IBM Power PC
 :ipf : Itanium
