--- a/modules/administration/pages/tshoot-osadjabberd.adoc
+++ b/modules/administration/pages/tshoot-osadjabberd.adoc
@@ -8,7 +8,7 @@ Fix:
 Result:
 
 
-=== Open File Count Exceeded
+== Open File Count Exceeded
 
 ``SYMPTOMS``: OSAD clients cannot contact the SUSE Manager Server, and jabberd requires long periods of time to respond on port 5222.
 
@@ -32,7 +32,7 @@ In SUSE Manager the highest consuming process is c2s, which opens a connection p
 100 additional files are added, here, to accommodate for any non-connection file that c2s requires to work correctly.
 The hard limit applies to all processes belonging to the jabber user, and accounts for open files from the router, s2s and sm processes additionally.
 
-=== jabberd Database Corruption
+== jabberd Database Corruption
 
 ``SYMPTOMS``: After a disk is full error or a disk crash event, the jabberd database may have become corrupted.
 jabberd may then fail to start during spacewalk-service start:
@@ -80,7 +80,7 @@ rcosa-dispatcher stop
  rcosa-dispatcher start
 ----
 
-=== Capturing XMPP Network Data for Debugging Purposes
+== Capturing XMPP Network Data for Debugging Purposes
 
 
 If you are experiencing bugs regarding OSAD, it can be useful to dump network messages in order to help with debugging.
@@ -105,7 +105,7 @@ The following procedures provide information on capturing data from both the cli
 . Once you have finished your capture re-open terminal 1 and stop the capture of data with: kbd:[CTRL+c]
 
 
-=== Engineering Notes: Analyzing Captured Data
+== Engineering Notes: Analyzing Captured Data
 
 
 This section provides information on analyzing the previously captured data from client and server.
