--- a/modules/administration/pages/tshoot-registerclones.adoc
+++ b/modules/administration/pages/tshoot-registerclones.adoc
@@ -21,7 +21,7 @@ If more detailed instructions are required, put them in a "Resolving" procedure:
 
 Sometimes a cloned client (either traditional or Salt) will use the same machine ID as the system they are a clone of.
 This results in {productname} only recognizing one system, rather than two different systems.
-This can be resolved by changing the machine ID of the  cloned system, so that {productnamne} recognizes them as two different clients.
+This can be resolved by changing the machine ID of the  cloned system, so that {productname} recognizes them as two different clients.
 
 [NOTE]
 ====
