updated admin and audit xrefs - done - verified outputs

--- a/modules/reference/pages/admin/bootstrap-script.adoc
+++ b/modules/reference/pages/admin/bootstrap-script.adoc
@@ -43,7 +43,7 @@ Enable Remote Configuration::
 Enable remote configuration management and remote command acceptance of the systems to be bootstrapped to the {productname}.
 Both features are useful for completing client configuration.
 
-Refer to xref:reference:configuration/config-menu.adoc[Configuration] and <<s5-sm-system-details-remote>> for more information.
+Refer to xref:reference:configuration/config-menu.adoc[Configuration] and xref:reference:systems/system-details/sd-remote-command.adoc[Remote Command] for more information.
 
 Client HTTP Proxy::
 Client HTTP proxy settings if you are using an HTTP proxy server.
