--- a/modules/reference/pages/admin/general.adoc
+++ b/modules/reference/pages/admin/general.adoc
@@ -1,11 +1,6 @@
 [[s3-sattools-config-gen]]
 = General
 
-
-
-
-
-
 This page allows you to adjust basic {productname} administration settings.
 
 image::admin_general_configuration.png[scaledwidth=80%]
@@ -28,7 +23,7 @@ The HTTP proxy settings are for the communication with a {productname} parent se
 The HTTP proxy should be of the form: ``hostname:port``; the default port `8080` will be used if none is explicitly provided.
 HTTP proxy settings for client systems to connect to this {productname} can be different, and will be configured separately, for example via:
 // TODO: UPDATE LINK for github
-<<s3-sattools-config-bootstrap>>.
+xref:reference:admin/bootstrap-script.adoc[Bootstrap Script].
 
 menu:RPM repository mount point[]::
 The directory where RPM packages are mirrored.
