--- a/modules/reference/pages/admin/task-schedules.adoc
+++ b/modules/reference/pages/admin/task-schedules.adoc
@@ -1,17 +1,13 @@
 [[ref.webui.admin.schedules]]
 = Task Schedules
 
-
-
-
-
 Under menu:Main Menu[Admin > Task Schedules] all predefined task bunches are listed.
 
 image::admin_task_schedules.png[scaledwidth=80%]
 
 Click a menu:SUSE Manager Schedules[Schedule name] to open its menu:Schedule Name[Basic Schedule Details] where you can disable it or change the frequency.
 Click btn:[Edit Schedule] to update the schedule with your settings.
-To delete a schedule, click btn:[delete schedule] in the upper right-hand corner.
+To delete a schedule, click btn:[Delete Schedule] in the upper right-hand corner.
 
 [WARNING]
 ====
@@ -37,9 +33,8 @@ Clears task engine (taskomatic) history data older than a specified number of da
 
 menu:cobbler-sync-default:[]::
 Synchronizes distribution and profile data from {productname} to Cobbler.
-For more information on Cobbler, see
-// TODO update link for github
-<<advanced.topics.cobbler>>.
+For more information refer to:
+xref:client-configuration:cobbler.adoc[Cobbler]
 
 
 menu:compare-configs-default:[]::
@@ -47,31 +42,27 @@ Compares configuration files as stored in configuration channels with the files 
 To review comparisons, click the menu:Main Menu[Systems] tab and click the system of interest.
 Go to menu:Configuration[Compare Files].
 For more information, refer to:
-//TODO update link for github
-<<s5-sdc-configuration-diff>>.
+xref:reference:systems/system-details/sd-configuration.adoc#sd-config-compare-files[Compare Files].
 
 
 menu:cve-server-channels-default:[]::
 Updates internal pre-computed CVE data that is used to display results on the menu:Main Menu[Audit > CVE Audit] page.
 Search results in the menu:Main Menu[Audit > CVE Audit] page are updated to the last run of this schedule).
 For more information, see:
-// TODO update github link
-<<ref.webui.audit.cve>>.
+xref:reference:audit/audit-cve-audit.adoc[CVE Audit]
 
 
 menu:daily-status-default:[]::
 Sends daily report e-mails to relevant addresses.
 To learn more about how to configure notifications for specific users, see:
-//TODO update github link
-<<s4-usr-active-details-prefs>>
+xref:reference:users/user-details.adoc[User Preferences]
 
 
 menu:errata-cache-default:[]::
 Updates internal patch cache database tables, which are used to look up packages that need updates for each server.
 Also, this sends notification emails to users that might be interested in certain patches.
 For more information on patches, see:
-//  TODO Update github link
-<<ref.webui.patches>>.
+xref:reference:patches/patches-menu.adoc[Patches]
 
 
 menu:errata-queue-default:[]::
@@ -106,16 +97,14 @@ deletes stale package files from the file system.
 menu:reboot-action-cleanup-default:[]::
 any reboot actions pending for more than six hours are marked as failed and associated data is cleaned up in the database.
 For more information on scheduling reboot actions, see:
-// Todo Update github link
-<<s5-sdc-provisioning-powermgnt>>.
+xref:reference:systems/system-details/sd-provisioning.adoc#sd-power-management[Power Management]
 
 
 menu:sandbox-cleanup-default:[]::
-cleans up menu:sandbox[] configuration files and channels that are older than the menu:sandbox_lifetime[] configuration parameter (3 days by default).
+Cleans up Sandbox configuration files and channels that are older than the __sandbox_lifetime__ configuration parameter (3 days by default).
 Sandbox files are those imported from systems or files under development.
 For more information, see:
-// TODO Update github link
-<<s5-sdc-configuration-add-files>>
+xref:reference:systems/system-details/sd-configuration.adoc#sd-config-add-files[Add Files]
 
 
 menu:session-cleanup-default:[]::
