--- a/modules/reference/pages/audit/audit-openscap-overview.adoc
+++ b/modules/reference/pages/audit/audit-openscap-overview.adoc
@@ -1,10 +1,6 @@
 [[ch-openscap]]
 = System Security via OpenSCAP
 
-
-
-
-
 The Security Certification and Authorization Package (SCAP) is a standardized compliance checking solution for enterprise-level Linux infrastructures.
 It is a line of specifications maintained by the National Institute of Standards and Technology (NIST) for maintaining system security for enterprise systems.
 
@@ -104,7 +100,8 @@ This functionality will be adapted and enabled in a future release.
 . To perform a scan via the Web interface, log in to {productname} .
 . Click on menu:Systems[] and select the target system.
 . Click on menu:Audit[Schedule] .
-. Fill in the Schedule New XCCDF Scan form. See <<sm-audit-schedule>> for more information about the fields on this page.
+. Fill in the Schedule New XCCDF Scan form. For more information about the fields on this page, see:
+xref:reference:audit/system-details-audit.adoc#sm-audit-schedule[Schedule Audit]
 +
 WARNING: The XCCDF content is validated before it is run on the remote system.
 Specifying invalid arguments can make spacewalk-oscap fail to validate or run.
