--- a/modules/reference/pages/audit/openscap-all-scans.adoc
+++ b/modules/reference/pages/audit/openscap-all-scans.adoc
@@ -1,10 +1,6 @@
 [[ref.webui.audit.openscap]]
 = All Scans
 
-
-
-
-
 If you click menu:Main Menu[Audit > OpenSCAP > All Scans], an overview of the {openscap} Scans appears.
 SCAP (Security Content Automation Protocol) is a framework to maintain the security of enterprise systems.
 It mainly performs the following tasks:
@@ -13,9 +9,10 @@ It mainly performs the following tasks:
 * Checking system security configuration settings
 * Examining systems for signs of compromise
 
-For a description of the {webui} dialogs, see <<s2-openscap-suma-pages>>.
+For a description of the {webui} dialogs, see:
+xref:reference:audit/audit-openscap-overview.adoc[OpenSCAP {productname} Web Interface]
 
-For instructions and tips on how to best use OpenSCAP with {productname}, refer to <<ch-openscap>>.
+For instructions and tips on how to best use OpenSCAP with {productname}, refer to: xref:reference:audit/audit-openscap-overview.adoc#ch-openscap[System Security via OpenSCAP]
 To learn more about OpenSCAP, see the project home page at http://open-scap.org.
 
 
