--- a/modules/reference/pages/audit/system-details-audit.adoc
+++ b/modules/reference/pages/audit/system-details-audit.adoc
@@ -3,7 +3,9 @@
 
 To display a system's audit page, click menu:Systems[system_name > Audit].
 Use this page to schedule and view compliance scans for a particular system.
-Scans are performed by the OpenSCAP tool, which implements NIST's standard Security Content Automation Protocol (SCAP). Before you scan a system, make sure that the SCAP content is prepared and all prerequisites in <<s1-openscap-suma-prerq>> are met.
+Scans are performed by the OpenSCAP tool, which implements NIST's standard Security Content Automation Protocol (SCAP).
+Before you scan a system, make sure that the SCAP content is prepared and all prerequisites in
+xref:reference:audit/audit-openscap-overview.adoc#s1-openscap-suma-prerq[Prerequisites for Using OpenSCAP in {productname}] are met.
 
 == List Scans
 
@@ -85,8 +87,7 @@ This list can be filtered by a specific result.
 
 
 [[sm-audit-schedule]]
-== Schedule Page
-
+== Schedule Audit
 
 Use the Schedule New XCCDF Scan page to schedule new scans for specific machines.
 Scans occur at the system's next scheduled check-in that occurs after the date and time specified.
@@ -126,7 +127,6 @@ Specifying invalid arguments can cause [command]``spacewalk-oscap`` to fail to v
 Due to security concerns, the [command]``oscap xccdf eval`` command only accepts a limited set of parameters.
 +
 
-
-
 For information about how to schedule scans using the {webui}
-, refer to <<pro-os-suma-audit-scans-webui>>.
+, refer to:
+xref:reference:audit/audit-openscap-overview.adoc#pro-os-suma-audit-scans-webui[Procedure: Scans via the Web Interface]
