--- a/modules/installation/pages/client-requirements.adoc
+++ b/modules/installation/pages/client-requirements.adoc
@@ -6,23 +6,25 @@
 
 Supported operating systems for traditional and Salt clients are listed in this table.
 
+In this table, &#2713; indicates that clients running the operating system are supported by {scc}, and &#2717; indicates that it is not supported.
+Fields marked as `TBD` are under consideration, and may or may not be supported at a later date.
+
 [[mgr.supported.clients]]
 [cols="1,1,1,1,1", options="header"]
 .Supported Client Systems
 |===
 | Operating System | Architecture | Traditional Clients | Salt Clients
-| {sle} 15 | {x86}_64, IBM {ppc} ({ppc64le}), {zseries}, ARM | Supported | Supported
-| {sle} 12 | {x86}_64, IBM {ppc} ({ppc64le}), {zseries}, ARM | Supported | Supported
-| {sle} 11 | {x86}, {x86}_64, {ipf}, IBM {ppc}, {zseries} | Supported | Supported
-| {sle} 10 SP3+ | {x86}, {x86}_64, {ipf}, IBM {ppc}, {zseries} | Supported | Supported
+| {sle} 15 | {x86}_64, IBM {ppc} ({ppc64le}), {ibmz}, ARM | &#2713; | &#2713;
+| {sle} 12 | {x86}_64, IBM {ppc} ({ppc64le}), {ibmz}, ARM | &#2713; | &#2713;
+| {sle} 11 | {x86}, {x86}_64, {ipf}, IBM {ppc}, {ibmz} | &#2713; | &#2713;
 | {rhel} 8 | {x86}_64 | TBD | TBD
-| {rhel} 7 | {x86}_64 | Supported | Supported
-| {rhel} 6 | {x86}, {x86}_64 | Supported | Supported
+| {rhel} 7 | {x86}_64 | &#2713; | &#2713;
+| {rhel} 6 | {x86}, {x86}_64 | &#2713; | &#2713;
 | CentOS 7 | {x86}, {x86}_64 | TBD | TBD
 | CentOS 6 | {x86}, {x86}_64 | TBD | TBD
-| {opensuse} Leap 15 | {x86}_64 | TBD | TBD
-| {ubuntu} 16.04 | {x86}_64 | Not supported | Supported
-| {ubuntu} 18.04 | {x86}_64 | Not supported | Supported
+| {opensuse} Leap 15.1 | {x86}_64 | &#2717; | &#2713;
+| {ubuntu} 16.04 | {x86}_64 | &#2717; | &#2713;
+| {ubuntu} 18.04 | {x86}_64 | &#2717; | &#2713;
 | Microsoft Windows 10 | {x86}_64 | TBD | TBD
 |===
 
