Added IBM Z to entities, fixed table column error.

--- a/modules/installation/pages/client-requirements.adoc
+++ b/modules/installation/pages/client-requirements.adoc
@@ -10,11 +10,11 @@ In this table, &#2713; indicates that clients running the operating system are s
 Fields marked as `TBD` are under consideration, and may or may not be supported at a later date.
 
 [[mgr.supported.clients]]
-[cols="1,1,1,1,1", options="header"]
+[cols="1,1,1,1", options="header"]
 .Supported Client Systems
 |===
 | Operating System | Architecture | Traditional Clients | Salt Clients
-| {sle} 15 | {x86}_64, IBM {ppc} ({ppc64le}), {ibmz}, ARM | &#2713; | &#2713;
+| {sle} 15 | {x86}_64, IBM {ppc} ({ppc64le}), {ibmz}, ARM | &#2713; | &#S2713;
 | {sle} 12 | {x86}_64, IBM {ppc} ({ppc64le}), {ibmz}, ARM | &#2713; | &#2713;
 | {sle} 11 | {x86}, {x86}_64, {ipf}, IBM {ppc}, {ibmz} | &#2713; | &#2713;
 | {rhel} 8 | {x86}_64 | TBD | TBD
