--- a/modules/installation/pages/client-requirements.adoc
+++ b/modules/installation/pages/client-requirements.adoc
@@ -14,8 +14,8 @@ Fields marked as `TBD` are under consideration, and may or may not be supported 
 .Supported Client Systems
 |===
 | Operating System | Architecture | Traditional Clients | Salt Clients
-| {sle} 15 | {x86}_64, IBM {ppc} ({ppc64le}), {ibmz}, ARM | &#2713; | &#S2713;
-| {sle} 12 | {x86}_64, IBM {ppc} ({ppc64le}), {ibmz}, ARM | &#2713; | &#2713;
+| {sle} 15 | {x86}_64, {ppc}, {ibmz}, ARM | &#2713; | &#2713;
+| {sle} 12 | {x86}_64, {ppc}, {ibmz}, ARM | &#2713; | &#2713;
 | {sle} 11 | {x86}, {x86}_64, {ipf}, IBM {ppc}, {ibmz} | &#2713; | &#2713;
 | {rhel} 8 | {x86}_64 | TBD | TBD
 | {rhel} 7 | {x86}_64 | &#2713; | &#2713;
