Set up structure

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -10,8 +10,9 @@ ifndef::backend-pdf[]
 ** xref:live-patching.adoc[Live Patching]
 *** xref:live-patching-sles15.adoc[Live Patching on SLES 15]
 *** xref:live-patching-sles12.adoc[Live Patching on SLES 12]
-// Monitoring
-** xref:icinga.adoc[Icinga]
+** xref:monitoring.adoc[Monitoring]
+*** xref:prometheus.adoc[Prometheus]
+*** xref:icinga.adoc[Icinga]
 // Containers
 ** xref:kubernetes.adoc[Kubernetes]
 // Virtualization.
