call salt on the suma server
https://github.com/SUSE/spacewalk/issues/7597

--- a/modules/retail/pages/retail-install-setup.adoc
+++ b/modules/retail/pages/retail-install-setup.adoc
@@ -23,7 +23,7 @@ Branch server installation steps:
 
 . Install the branch server and register it to {susemgr}
 . Assign and configure branch server formulas
-. Synchronize images to the servers
+. Synchronize images to the branch servers
 
 Each procedure is detailed in this section.
 
@@ -147,14 +147,14 @@ salt <branch_server_salt_id> state.apply
 
 
 
-== Synchronize images to the servers
+== Synchronize images to the branch servers
 
 The OS image you use on the {susemgr} server must be synchronized for use on the branch server.
 You can do this with the Salt [command]``image-sync`` tool.
 
 .Procedure: Synchronize images with branch server
 
-. On the branch server, run this command:
+. On the {susemgr} server, run this command:
 +
 ----
 salt <branch_server_salt_id> state.apply image-sync
